# langgraph-browser-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  config.py
src/tools/: __init__.py  browser.py  notifications.py
